--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+	"name"       : "mediawiki/EventBus",
+	"type"       : "mediawiki-extension",
+	"description": "Propagation of change events to a RESTful service",
+	"license"    : "GPL-2.0+",
+	"minimum-stability": "dev",
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.2",
 		"mediawiki/mediawiki-codesniffer": "0.5.1"
