--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
 	"description": "Propagation of change events to a RESTful service",
 	"license": "GPL-2.0+",
 	"minimum-stability": "dev",
+	"require": {
+		"firebase/php-jwt": "4.0.0"
+	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9.2",
 		"mediawiki/mediawiki-codesniffer": "14.1.0",
