Use SPDX 3.0 license identifier
SPDX released version 3 of their license list (<https://spdx.org/licenses/>),
which changed the FSF licenses to explicitly end in -only or -or-later
instead of relying on an easy to miss + symbol.

Bug: T183858
Change-Id: I83100d9c9a46125dfd73989fbae3147ff7e4a57d

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "mediawiki/EventBus",
 	"type": "mediawiki-extension",
 	"description": "Propagation of change events to a RESTful service",
-	"license": "GPL-2.0+",
+	"license": "GPL-2.0-or-later",
 	"minimum-stability": "dev",
 	"require": {
 		"firebase/php-jwt": "4.0.0"
