--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
 	"name": "eventbus",
 	"version": "0.0.0",
 	"scripts": {
-		"test": "grunt test"
+		"test": "grunt test",
+		"api-testing": "mocha tests/api-testing"
 	},
 	"devDependencies": {
+		"api-testing": "^1.0.4",
 		"eslint-config-wikimedia": "0.15.0",
 		"grunt": "1.0.4",
 		"grunt-banana-checker": "0.8.1",
-		"grunt-eslint": "22.0.0"
+		"grunt-eslint": "22.0.0",
+		"mocha": "^7.0.1",
+		"uuid": "^3.4.0"
 	}
 }
