build: Updating mediawiki/mediawiki-codesniffer to 32.0.0
Additional changes:
* Added the `wikimedia/mediawiki` profile in .eslintrc.json (T262222).
* Removed globals `mw`, `OO`, `require`, included via `wikimedia/mediawiki` profile (T262222).

Change-Id: I6da2dafcb2d8528f12e6511357a5b29ca00a989d

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,17 +2,15 @@
 	"root": true,
 	"extends": [
 		"wikimedia/client",
-		"wikimedia/jquery"
+		"wikimedia/jquery",
+		"wikimedia/mediawiki"
 	],
 	"globals": {
 		"ve": true,
 		"VisualEditorSupportCheck": false,
-		"OO": false,
 		"unicodeJS": false,
 		"RangeFix": false,
-		"Papa": false,
-		"mw": false,
-		"require": false
+		"Papa": false
 	},
 	"rules": {
 		"no-jquery/no-hide": "error",
