--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
-		"mocha": "^7.1.1",
+		"mocha": "7.2.0",
 		"uuid": "^3.4.0"
 	}
 }
