--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"api-testing": "mocha tests/api-testing"
 	},
 	"devDependencies": {
-		"api-testing": "^1.4.2",
-		"eslint-config-wikimedia": "0.20.0",
-		"grunt": "1.4.0",
+		"api-testing": "1.5.0",
+		"eslint-config-wikimedia": "0.21.0",
+		"grunt": "1.4.1",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "23.0.0",
 		"mocha": "7.2.0",
