build: Updating npm dependencies
* eslint-config-wikimedia: 0.22.1 → 0.24.0
  The following rules are failing and were disabled:
  * es-x/no-async-functions
  * es-x/no-block-scoped-variables
  * es-x/no-destructuring

* grunt: 1.5.3 → 1.6.1

Change-Id: I18832b072e49e2dc1c3cb2cb694b16370d0bb395

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,9 @@
 		"no-jquery/no-hide": "error",
 		"no-jquery/no-show": "error",
 		"no-jquery/no-toggle": "error",
-		"max-len": "off"
+		"max-len": "off",
+		"es-x/no-async-functions": "warn",
+		"es-x/no-block-scoped-variables": "warn",
+		"es-x/no-destructuring": "warn"
 	}
 }
